clusters/common/media/radarr/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: radarr
spec:
  podSelector:
    matchLabels:
      app: radarr
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: radarr
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: media
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
          podSelector:
            matchLabels:
              istio: ingressgateway
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.200.5/32
      ports:
        - protocol: TCP
          port: 9091
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 192.168.0.0/16
